testsuite/tests/typecheck/should_fail/T5691.stderr

T5691.hs:24:10: error:
    • No instance for (Alternative RecDecParser)
        required by the superclasses of an instance declaration
    • In the instance declaration for ‘MonadPlus RecDecParser’

T5691.hs:24:10: error:
    • No instance for (Monad RecDecParser)
        required by the superclasses of an instance declaration
    • In the instance declaration for ‘MonadPlus RecDecParser’
